--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.13.0",
+    "d3-scale": "^4.0.2",
+    "dev": "^0.1.3",
     "p5": "^1.9.1",
     "solid-js": "^1.8.15",
-    "tone": "^14.7.77"
+    "tone": "^14.7.77",
+    "wavefile": "^11.0.0"
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.8",
     "@types/p5": "^1.7.6",
     "autoprefixer": "^10.4.18",
     "tailwindcss": "^3.4.1",
